[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rst-compliance-suite"
version = "0.1.0"
description = "Pytest suite scaffold for ICANN RST v2026.04 compliance testing"
requires-python = ">=3.10"
dependencies = [
  "pytest==8.3.5",
  "pytest-html==4.1.1",
  "requests==2.32.3",
  "jsonschema==4.23.0",
  "xmlschema==3.4.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Use the modern PEP 451 importer instead of the legacy `prepend` mode.
# Eliminates `__file__` mismatches when the same basename (e.g.
# `test_dnssec_zone_health.py`) lives in both `tests/` and
# `internal-rst-checker/tests/<suite>/` and both roots are collected in
# one `pytest` invocation. See review finding Info-1.
addopts = "-q --import-mode=importlib"
